# simple-datadog-mcp

./: README.md  main.py  pyproject.toml
.github/workflows/: codex-review.yml
